--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
-/IGHTMLQuery.xcodeproj/xcuserdata/siuying.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
+/IGHTMLQuery.xcodeproj/xcuserdata/*.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
+.DS_Store
+/IGHTMLQuery.xcodeproj/xcuserdata
+/IGHTMLQuery.xcodeproj/project.xcworkspace/xcshareddata
+/IGHTMLQuery.xcodeproj/project.xcworkspace/xcuserdata
+/IGHTMLQuery.xcodeproj/project.xcworkspace/xcuserdata
