ignore Pods folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+Pods
 /IGHTMLQuery.xcodeproj/xcuserdata/*.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
 .DS_Store
 /IGHTMLQuery.xcodeproj/xcuserdata
