Add [node queryWithCSS:cssSelector] method, which allow query of nodes with CSS Selector.
- Add CSSSelectorConvert as dependency
- Add queryWithCSS: to IGXMLNode and IGXMLNodeSet
- Add ruby interface node.css(selector) to XMLNode and XMLNodeSet

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 Pods
-/IGHTMLQuery.xcodeproj/xcuserdata/*.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
+IGHTMLQuery.xcodeproj/xcuserdata/*.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
 .DS_Store
-/IGHTMLQuery.xcodeproj/xcuserdata
-/IGHTMLQuery.xcodeproj/project.xcworkspace/xcshareddata
-/IGHTMLQuery.xcodeproj/project.xcworkspace/xcuserdata
-/IGHTMLQuery.xcodeproj/project.xcworkspace/xcuserdata
+IGHTMLQuery.xcodeproj/xcuserdata
+IGHTMLQuery.xcodeproj/project.xcworkspace/xcshareddata
+IGHTMLQuery.xcodeproj/project.xcworkspace/xcuserdata
+IGHTMLQuery.xcodeproj/project.xcworkspace/xcuserdata
+IGHTMLQuery.xcworkspace/xcuserdata/
