--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
 rvm: 2.0.0
 before_install: gem install cocoapods
 language: objective-c
+xcode_project: IGHTMLQuery.xcodeproj
+xcode_scheme: IGHTMLQuery
