--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,4 @@ before_install: gem install cocoapods
 language: objective-c
 xcode_project: IGHTMLQuery.xcodeproj
 xcode_scheme: IGHTMLQuery
+xcode_sdk: iphonesimulator
