fixes travis build by install cocoapods

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,5 @@ language: objective-c
 before_script:
   - export LANG=en_US.UTF-8
   - gem install xcpretty
+  - gem install cocoapods -v '0.29.0'
 script: xcodebuild -workspace IGHTMLQuery.xcworkspace -scheme IGHTMLQuery -sdk iphonesimulator test | xcpretty -c; exit ${PIPESTATUS[0]}
