--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: objective-c
 before_install:
   - export LANG=en_US.UTF-8
-  - gem install xcpretty
-  - gem install cocoapods -v '0.29.0'
+  - bundle install
+  - pod install
 script: xcodebuild -workspace IGHTMLQuery.xcworkspace -scheme IGHTMLQuery -sdk iphonesimulator test | xcpretty -c; exit ${PIPESTATUS[0]}
