--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,5 @@ before_install:
   - export LANG=en_US.UTF-8
   - bundle install
   - pod install
-script: xcodebuild -workspace IGHTMLQuery.xcworkspace -scheme IGHTMLQuery -sdk iphonesimulator test | xcpretty -c; exit ${PIPESTATUS[0]}
+script: rake test
+after_success: slather
