--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: objective-c
-osx_image: xcode7.1
+osx_image: xcode7.2
 before_install:
   - export LANG=en_US.UTF-8
   - bundle install
   - pod install
-script: xcodebuild -workspace IGHTMLQuery.xcworkspace -scheme IGHTMLQuery -sdk iphonesimulator test | xcpretty -c; exit ${PIPESTATUS[0]}
+script: xcodebuild -workspace IGHTMLQuery.xcworkspace -scheme IGHTMLQuery -sdk iphonesimulator9.2 test | xcpretty -c; exit ${PIPESTATUS[0]}
