--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: objective-c
-osx_image: xcode7.2
+osx_image: xcode10.1
 before_install:
   - export LANG=en_US.UTF-8
   - bundle install
   - pod install
-script: xcodebuild -workspace IGHTMLQuery.xcworkspace -scheme IGHTMLQuery -sdk iphonesimulator9.2 test -destination 'platform=iOS Simulator,name=iPhone 6 Plus' | xcpretty -c; exit ${PIPESTATUS[0]}
+script: xcodebuild -workspace IGHTMLQuery.xcworkspace -scheme IGHTMLQuery -sdk iphonesimulator test -destination 'platform=iOS Simulator,name=iPhone 6 Plus' | xcpretty -c; exit ${PIPESTATUS[0]}
